--- a/paper/sections/incremental.tex
+++ b/paper/sections/incremental.tex
@@ -15,10 +15,10 @@ computations with respect to execution time.
 This motivates
 \end{arxiv}
 \begin{kdd}
-computations, and motivate
+computations and motivate
 \end{kdd}
 our use of a highly optimized library,
-designed by~\citet{YangRuSe16} for representing rule lists and
+designed by~\citet{YangRuSe16}, for representing rule lists and
 performing operations encountered in evaluating functions of rule lists.
 %
 Furthermore, we exploit the hierarchical nature of the objective
