--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -22,7 +22,7 @@ and values (colors correspond to folds).
 \end{center}
 \caption{Training and test accuracy as a function of model size.
 %
-For CORELS, CART, and C4.5, we vary the regularization parameter~$\Reg$,
+For CORELS, CART, and C4.5, we vary the regularization parameter~$\Reg$
 and complexity parameters~$cp$ and~$C$, respectively.
 % and are indicated within parentheses in the legend.
 %
@@ -54,7 +54,7 @@ and dramatically overfits for all tested parameters.
 % RIPPER in R's caret
 
 Our experimental analysis addresses four questions:
-(1) How does CORELS' accuracy and model size compare to other algorithms?
+(1) How does CORELS' accuracy and model size compare to other algorithms'?
 (2) How rapidly does the objective function converge?
 (3) How rapidly does CORELS prune the search space?
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
@@ -69,7 +69,7 @@ an extensive evaluation contained in a long version of this report (in preparati
 \end{kdd}
 %
 We focus on two problems:
-using the ProPublica dataset~\citep{LarsonMaKiAn16} to predict two-year recidivism,
+using the ProPublica dataset~\citep{LarsonMaKiAn16} to predict two-year recidivism
 and using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
 whether a weapon will be found on a stopped individual who is frisked or searched.
 
@@ -187,7 +187,7 @@ the equivalent points bound remains far from complete,
 with its lower bound far from the optimum.
 %
 Table~\ref{tab:ablation} provides summary statistics for experiments using
-the full CORELS implementation and variants each remove a specific optimization.
+the full CORELS implementation and variants that each remove a specific optimization.
 %
 Figure~\ref{fig:queue} presents a view of the same experiments, focusing
 on three of our optimizations. These plots depict the number of
