Cite long paper in KDD and vice versa

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,3 +1,21 @@
+@inproceedings{AngelinoLaAlSeRu17-kdd,
+author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
+title = "Learning certifiably optimal rule lists for categorical data",
+booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'17)}},
+year = {2017},
+location = {Halifax, Nova Scotia, Canada},
+__pages = {},
+year = {2017}
+}
+
+@article{AngelinoLaAlSeRu17,
+author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
+title = "Learning certifiably optimal rule lists for categorical data",
+  journal = {Preprint at arXiv:1704.01701},
+     year = {2017},
+    month = {Apr}
+}
+
 @unpublished{RudinEr15,
 __author={Cynthia Rudin and Seyda Ertekin},
 author={C. Rudin and S. Ertekin},
