--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -203,13 +203,21 @@ We produce certifiably optimal, interpretable rule lists that achieve
 the same accuracy as approaches such as random forests.
 %
 This calls into question the need for use of a proprietary,
-\begin{kdd}
 black box algorithm for recidivism prediction.
+
+Our work overlaps with the thesis presented by~\citet{Larus-Stone17}.
+%
+We have also written a
+\begin{kdd}
+long version of this paper that includes proofs to all
+bounds in~\S\ref{sec:framework}, additional bounds and empirical results,
+and further implementation and data processing details~\citep{AngelinoLaAlSeRu17}. \\
+
+Our code is at
 \end{kdd}
 \begin{arxiv}
-black box algorithm for recidivism prediction. \\
+short version version of this paper~\citep{AngelinoLaAlSeRu17-kdd}. \\
 
 Our implementation of CORELS is at
-\textbf{\url{https://github.com/nlarusstone/corels}}.~\footnote{Our work
-overlaps with the thesis presented by~\citet{Larus-Stone17}.}
 \end{arxiv}
+\textbf{\url{https://github.com/nlarusstone/corels}}.
