Long version no longer in preparation

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -65,7 +65,7 @@ All timed results were executed on a server with two Intel Xeon E5-2699~v4
 Except where we mention a memory constraint, all experiments
 can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.\begin{kdd}
 ~\footnote{Due to page constraints, we only present a subset of experiments from
-an extensive evaluation contained in a long version of this report (in preparation).}
+an extensive evaluation contained in a long version of this report~\citep{AngelinoLaAlSeRu17}.}
 \end{kdd}
 %
 We focus on two problems:
