--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -209,14 +209,14 @@ Our work overlaps with the thesis presented by~\citet{Larus-Stone17}.
 %
 We have also written a
 \begin{kdd}
-long version of this paper that includes proofs to all
+long version of this report that includes proofs to all
 bounds in~\S\ref{sec:framework}, additional bounds and empirical results,
 and further implementation and data processing details~\citep{AngelinoLaAlSeRu17}. \\
 
 Our code is at
 \end{kdd}
 \begin{arxiv}
-short version version of this paper~\citep{AngelinoLaAlSeRu17-kdd}. \\
+short version version of this report~\citep{AngelinoLaAlSeRu17-kdd}. \\
 
 Our implementation of CORELS is at
 \end{arxiv}
