--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -339,7 +339,7 @@ the number of observations with the minority label.
 \begin{kdd}
 \footnote{Due to page constraints, we include only a few
 relevant proofs; we present additional theorems and all proofs
-in a long version of this report (in preparation).}
+in a long version of this report~\citep{AngelinoLaAlSeRu17}.}
 \end{kdd}
 \end{itemize}
 
