They seem to really want semi-colons between keywords

--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -140,7 +140,7 @@
 % We no longer use \terms command
 %\terms{Theory}
 
-\keywords{Rule lists, Decision trees, Optimization, Interpretable models}
+\keywords{Rule lists; Decision trees; Optimization; Interpretable models}
 
 \maketitle
 
