Add minimal acks to KDD

--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -27,6 +27,7 @@
 
 \acmPrice{15.00} % <-- CHECK THIS
 
+% gets rid of optional ACM reference format
 \fancyhead{}
 \settopmatter{printacmref=false}
 
@@ -157,6 +158,12 @@
 \input{sections/experiments}
 
 \input{sections/conclusion}
+
+\section*{Acknowledgements}
+E.A. is supported by the Miller Institute for Basic Research in Science,
+University of California, Berkeley, and is hosted by Prof. M.I. Jordan at RISELab.
+%
+C.D.R. is supported in part by MIT-Lincoln Labs.
 
 %\input{samplebody-conf}
 
