Place star at optimum in execution traces (arxiv)

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -618,7 +618,7 @@ and NYCLU (${\Reg = 0.01}$, ${M = 46}$) (right) datasets.
 Top: Objective value (thin line) and lower bound (thick line) for CORELS,
 as a function of wall clock time (log scale).
 %
-Numbered hatch marks along the trace of the objective value
+Numbered points along the trace of the objective value
 indicate when the length of the best known rule list changes,
 and are labeled by the new length.
 %
