Update execution figure for KDD

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -113,7 +113,7 @@ Top: Objective value (thin line) and lower bound (thick line) for CORELS,
 and lower bound (dashes) for an execution without the equivalent points bound.
 %as a function of wall clock time (log scale).
 %
-Numbered hatch marks
+Numbered points
 %along the objective
 indicate when the length of the best known rule list changes,
 and are labeled by the new length.
