Bib file tweaks

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -11,9 +11,9 @@ year = {2017}
 @article{AngelinoLaAlSeRu17,
 author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
 title = "Learning certifiably optimal rule lists for categorical data",
-  journal = {Preprint at arXiv:1704.01701},
-     year = {2017},
-    month = {Apr}
+journal = {Preprint at arXiv:1704.01701},
+year = {2017},
+month = apr
 }
 
 @unpublished{RudinEr15,
@@ -60,7 +60,7 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
     title = {Directional Decision Lists},
   journal = {Preprint at arXiv:1508.07643},
      year = {2015},
-    month = {Aug}
+    month = aug
 }
 
 
@@ -80,7 +80,8 @@ author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
 __author={Hongyu Yang and Cynthia Rudin and Margo Seltzer},
     author={H. Yang and C. Rudin and M. Seltzer},
     journal={Preprint at arXiv:1602.08610},
-    year={2016}
+    year={2016},
+    month=feb
 }
 
 @inproceedings{GarofalakisHyRaSh00,
@@ -361,7 +362,7 @@ year={2015}
     title = {Using Decision Lists to Construct Interpretable and Parsimonious Treatment Regimes},
   journal = {Preprint at arXiv:1504.07715},
      year = 2015,
-    month = apr,
+    month = apr
  }
 
 @INPROCEEDINGS{Auer95theoryand,
@@ -452,7 +453,8 @@ title={Causal Falling Rule Lists},
 __author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
     journal={Preprint at arXiv:1510.05189},
-    year={2015}
+    year={2015},
+    month=oct
 }
 
 @inproceedings{GohRu14,
@@ -710,7 +712,7 @@ title = {Bayesian treed models},
 journal = {Machine Learning},
 year = {2002},
 volume = {48},
-number = {1/3},
+number = {1},
 pages = {299--320}
 }
 
@@ -733,7 +735,7 @@ author = {Shmueli, G.},
     __issn = {0883-4237},
     journal = {Statistical Science},
     keywords = {prediction, statistics},
-    month = {August},
+    month = aug,
     number = {3},
     pages = {289--310},
     posted-at = {2011-10-27 14:49:23},
@@ -1438,7 +1440,9 @@ __Author = {Goodman, Bryce and Flaxman, Seth},
 Author = {Goodman, B. and Flaxman, S.},
 	Journal = {Preprint at arXiv:1606.08813},
 	Title = {{EU} regulations on algorithmic decision-making and a ``right to explanation"},
-	Year = {2016}}
+	Year = {2016},
+	month = jun
+}
 
 @inproceedings{ripper,
 __author={William W. Cohen},
