Add bib ref for DNF branch-and-bound Rijnbeck & Kors 2010

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1463,3 +1463,19 @@ year={1995}
   year={2016},
   publisher={Institute of Mathematical Statistics}
 }
+
+@article{Rijnbeek10,
+ __author = {Rijnbeek, Peter R. and Kors, Jan A.},
+ author = {P. R. Rijnbeek and J. A. Kors}
+ title = {Finding a Short and Accurate Decision Rule in Disjunctive Normal Form by Exhaustive Search},
+ journal = {Machine Learning},
+ issue_date = {July 2010},
+ volume = {80},
+ number = {1},
+ month = jul,
+ year = {2010},
+ pages = {33--62},
+ numpages = {30},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA}
+}
