fix refs so that pdfs compile

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1466,7 +1466,7 @@ year={1995}
 
 @article{Rijnbeek10,
  __author = {Rijnbeek, Peter R. and Kors, Jan A.},
- author = {P. R. Rijnbeek and J. A. Kors}
+ author = {P. R. Rijnbeek and J. A. Kors},
  title = {Finding a Short and Accurate Decision Rule in Disjunctive Normal Form by Exhaustive Search},
  journal = {Machine Learning},
  issue_date = {July 2010},
