Link to code once and get rid of some whitespace

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -106,12 +106,7 @@ At other times, when we encounter a node with no children, we prune upwards, del
 node and recursively traversing the tree towards the root, deleting any childless nodes.
 %
 This garbage collection allows us to constrain the trie's memory consumption, though in our
-experiments we observe the minimum objective to decrease only a
-\begin{kdd}
-few times. \\
-
-Our code is at \textbf{\url{https://github.com/nlarusstone/corels}}.
-\end{kdd}
+experiments we observe the minimum objective to decrease only a few times.
 \begin{arxiv}
 small number of times. \\
 
