--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -211,7 +211,7 @@ We have also written a
 \begin{kdd}
 long version of this report that includes proofs to all
 bounds in~\S\ref{sec:framework}, additional bounds and empirical results,
-and further implementation and data processing details~\citep{AngelinoLaAlSeRu17}. \\
+and further implementation and data processing details~\citep{AngelinoLaAlSeRu17}.
 
 Our code is at
 \end{kdd}
