Removed spaces before footnotes

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -69,11 +69,11 @@ interventions are likely to discover criminal possession of a weapon.
 We first ran a 10-fold cross validation experiment using CORELS
 and eight other algorithms:
 logistic regression, support vector machines, AdaBoost, CART, C4.5,
-random forests, RIPPER, and scalable Bayesian rule lists (SBRL).~\footnote{For
+random forests, RIPPER, and scalable Bayesian rule lists (SBRL).\footnote{For
 SBRL, we use the C implementation at \url{https://github.com/Hongyuy/sbrlmod}.}
 %
 We use standard R packages, with default parameter settings,
-for the first seven algorithms.~\footnote{For CART, C4.5 (J48), and RIPPER,
+for the first seven algorithms.\footnote{For CART, C4.5 (J48), and RIPPER,
 \ie the tree and rule list learning algorithms, we use the implementations
 from the R packages rpart, RWeka, and caret, respectively.
 %
