--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -699,7 +699,7 @@ rule mining~(\S\ref{sec:setup}).
 %
 Specifically, it implies that we should only mine rules with
 normalized support of at least~$\Reg$;
-we need not mine rules with a smaller fraction of observations.~\footnote{We
+we need not mine rules with a smaller fraction of observations.\footnote{We
 describe our application of this idea in Appendix~\ref{appendix:data},
 where we provide details on data processing.}
 %
