--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -33,10 +33,10 @@ We discuss related literature in several subfields.
 We discuss related literature in several subfields, and highlight two recent works that this paper builds on.
 \end{arxiv}
 
-\textit{Interpretable Models:} There is a growing interest in interpretable (transparent, comprehensible) models because of their societal importance~\citep[see ][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in~predictions.
+\textit{Interpretable models:} There is a growing interest in interpretable (transparent, comprehensible) models because of their societal importance~\citep[see ][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in~predictions.
 
 
-\textit{Optimal Decision Tree Modeling}: The body of work closest to ours is possibly that of optimal decision tree modeling.
+\textit{Optimal decision tree modeling}: The body of work closest to ours is possibly that of optimal decision tree modeling.
 %
 Since the late 1990's, there has been research on building optimal decision trees
 using optimization techniques~\citep{Bennett96optimaldecision,dobkininduction},
